force-app/main/default/objects/MB_Test_Drive_Daily_Log__c/fields/Comm_No__c.field-meta.xml
<CustomField>
    <fullName>Comm_No__c</fullName>
    <formula>Courtesy_Vehicle__r.Comm_No__c</formula>
    <label>Comm No</label>
    <type>Text</type>
</CustomField>