force-app/main/default/objects/MB_Test_Drive_Daily_Log__c/fields/Courtesy_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Courtesy Vehicle</label>
    <referenceTo>Courtesy_Vehicle__c</referenceTo>
    <relationshipName>Vehicle_Daily_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>