force-app/main/default/objects/MB_Test_Drive_Daily_Log__c/listViews/Yesterday_s_Opening_and_Closing.listView-meta.xml
<ListView>
    <fullName>Yesterday_s_Opening_and_Closing</fullName>
    <columns>NAME</columns>
    <columns>Courtesy_Vehicle__c</columns>
    <columns>Comm_No__c</columns>
    <columns>Opening_Mileage__c</columns>
    <columns>Closing_Mileage__c</columns>
    <columns>Remarks__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday&apos;s Opening and Closing</label>
</ListView>